--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,12 +1,8 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
-    </div>
+  <h1>Login</h1>
+  <div class="well row">
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="login(form)" novalidate>
 
@@ -34,10 +30,10 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
+          <button class="btn btn-inverse btn-lg btn-login btn-primary" type="submit">
             Login
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
+          <a class="btn btn-default btn-lg btn-register pull-right" href="/signup">
             Register
           </a>
         </div>
