--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -1,10 +1,8 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Change Password</h1>
-    </div>
+  <h1>Change Password</h1>
+  <div class="well row">
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
 
