--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,9 +2,9 @@
 
 <div class="container">
   <h1>Add an Item</h1>
-  <form action="submit">
-    <input type="text" name="item" class="item-input form-control"
-           required/>
+  <form action="submit" ng-submit="main.addItem()">
+    <input type="text" name="item" class="item-input form-control" ng-model="main.itemToAdd" required/>
+    <button class="btn btn-primary">Add Me</button>
   </form>
   <div class="well">
     <br>
@@ -18,9 +18,3 @@
     <br>
   </div>
 </div>
-
-<footer class="footer">
-  <div class="container">
-    <!-- <p>Angular Fullstack v2.1.1 helped build this App</p> -->
-  </div>
-</footer>
