--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,20 +1,25 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
-  <h1>Add an Item</h1>
-  <form action="submit" ng-submit="main.addItem()">
-    <input type="text" name="item" class="item-input form-control" ng-model="main.itemToAdd" required/>
-    <button class="btn btn-primary">Add Me</button>
-  </form>
-  <div class="well">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  <h1>Manage Items</h1>
+  <button class="btn btn-primary pull-right" ng-show="isLoggedIn()">New Item</button>
+  <h3 class="alert alert-warning" ng-hide="isLoggedIn()">Please <a href="/login">login</a> or <a href="/signup">sign up</a> to view the item list</h3>
+  <h2 ng-show="isLoggedIn()">In Stock</h2>
+  <div class="well" ng-show="isLoggedIn()">
+    <ul class="list-group">
+      <a href="" class="list-group-item" ng-repeat="item in main.itemListActive">
+        <p>{{item.name}}</p>
+        <p class="quantity pull-right"><span class="badge">{{item.quantity}}</span></p>
+      </a>
+    </ul>
+  </div>
+  <h2 ng-show="isLoggedIn()">Out of Stock</h2>
+  <div class="well" ng-show="isLoggedIn()">
+    <ul class="list-group">
+      <a href="" class="list-group-item" ng-repeat="item in main.itemListInactive">
+        <p>{{item.name}}</p>
+        <p class="quantity pull-right"><span class="badge">{{item.quantity}}</span></p>
+      </a>
+    </ul>
   </div>
 </div>
