--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,12 +2,16 @@
 
 <div class="container">
   <h1>Manage Items</h1>
-  <button class="btn btn-primary pull-right" ng-show="isLoggedIn()">New Item</button>
+  <a href="/add"><button class="btn btn-primary pull-right" ng-show="isLoggedIn()">
+    New Item
+  </button></a>
   <h3 class="alert alert-warning" ng-hide="isLoggedIn()">Please <a href="/login">login</a> or <a href="/signup">sign up</a> to view the item list</h3>
   <h2 ng-show="isLoggedIn()">In Stock</h2>
   <div class="well" ng-show="isLoggedIn()">
     <ul class="list-group">
-      <a href="" class="list-group-item" ng-repeat="item in main.itemListActive">
+      <a class="list-group-item"
+         ng-repeat="item in main.itemListActive" 
+         ng-click="main.transferEditView(item)">
         <p>{{item.name}}</p>
         <p class="quantity pull-right"><span class="badge">{{item.quantity}}</span></p>
       </a>
@@ -16,7 +20,7 @@
   <h2 ng-show="isLoggedIn()">Out of Stock</h2>
   <div class="well" ng-show="isLoggedIn()">
     <ul class="list-group">
-      <a href="" class="list-group-item" ng-repeat="item in main.itemListInactive">
+      <a href="/edit" class="list-group-item list-group-item-danger" ng-repeat="item in main.itemListInactive">
         <p>{{item.name}}</p>
         <p class="quantity pull-right"><span class="badge">{{item.quantity}}</span></p>
       </a>
