--- a/client/app/main/edit-item.html
+++ b/client/app/main/edit-item.html
@@ -14,8 +14,9 @@
 				   ng-model="main.tempItem.quantity">
 			<button class="btn btn-primary pull-left">Submit</button>
 		</form>
-		<a href="/" class="pull-right">
+		<a href="/" class="pull-left">
 			<button class="btn btn-default">Back</button>
 		</a>
+		<button class="btn btn-danger pull-right" ng-click="main.deleteCurrentItem()">Delete</button>
 	</div>
 </div>
