--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -20,7 +20,9 @@
   <h2 ng-show="isLoggedIn()">Out of Stock</h2>
   <div class="well" ng-show="isLoggedIn()">
     <ul class="list-group">
-      <a href="/edit" class="list-group-item list-group-item-danger" ng-repeat="item in main.itemListInactive">
+      <a class="list-group-item list-group-item-danger" 
+         ng-repeat="item in main.itemListInactive"
+         ng-click="main.transferEditView(item)">
         <p>{{item.name}}</p>
         <p class="quantity pull-right"><span class="badge">{{item.quantity}}</span></p>
       </a>
