Fix issues with navbar and improve responsive elements

--- a/client/app/main/add-item.html
+++ b/client/app/main/add-item.html
@@ -15,7 +15,7 @@
 			<button class="btn btn-primary pull-left">Submit</button>
 		</form>
 		<a href="/" class="pull-left">
-			<button class="btn btn-default">Back</button>
+			<button class="side-btn btn btn-default">Back</button>
 		</a>
 	</div>
 </div>
