--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <h1>Login</h1>
-  <div class="well row">
+  <div class="well">
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="login(form)" novalidate>
 
