--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <h1>Change Password</h1>
-  <div class="well row">
+  <div class="well">
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
 
