--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <h1>Sign up</h1>
-  <div class="well row">
+  <div class="well">
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="register(form)" novalidate>
 
