--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/angular-ui-sortable/sortable.js"></script>
       
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
